# chatroom

./: +  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
src/: main.cc
src/server/: server_frame.cc  server_frame.h  test_server.cc
src/users/: test_user_manager.cc  user.cc  user.h  user_manager.cc  user_manager.h
src/util/: func.cc  func.h  test_func.cc
webserver/: chatroom
webserver/web/: chatroom.html  chatroom.js  chatrooms.html  general.css  hangouts.html  index.html  lectures.html  login.html  login.js  registration.html  registration.js  theater_and_co.html
